// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`is-infrastructure-levy-formally-adopted GET /is-infrastructure-levy-formally-adopted/change should render the change levy formally adopted page with "Formally adopted" radio option checked if isInfrastructureLevyFormallyAdopted is true 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Is the community infrastructure levy formally adopted?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="is-infrastructure-levy-formally-adopted-radio"
                                        name="isInfrastructureLevyFormallyAdoptedRadio" type="radio" value="yes"
                                        checked>
                                        <label class="govuk-label govuk-radios__label" for="is-infrastructure-levy-formally-adopted-radio">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="is-infrastructure-levy-formally-adopted-radio-2"
                                        name="isInfrastructureLevyFormallyAdoptedRadio" type="radio" value="no">
                                        <label class="govuk-label govuk-radios__label" for="is-infrastructure-levy-formally-adopted-radio-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`is-infrastructure-levy-formally-adopted GET /is-infrastructure-levy-formally-adopted/change should render the change levy formally adopted page with "Not formally adopted" radio option checked if isInfrastructureLevyFormallyAdopted is false 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Is the community infrastructure levy formally adopted?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="is-infrastructure-levy-formally-adopted-radio"
                                        name="isInfrastructureLevyFormallyAdoptedRadio" type="radio" value="yes">
                                        <label class="govuk-label govuk-radios__label" for="is-infrastructure-levy-formally-adopted-radio">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="is-infrastructure-levy-formally-adopted-radio-2"
                                        name="isInfrastructureLevyFormallyAdoptedRadio" type="radio" value="no"
                                        checked>
                                        <label class="govuk-label govuk-radios__label" for="is-infrastructure-levy-formally-adopted-radio-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`is-infrastructure-levy-formally-adopted POST /is-infrastructure-levy-formally-adopted/change should re-render the change levy formally adopted page with a validation error if a radio option was not selected 1`] = `"<div class="govuk-error-summary" data-module="govuk-error-summary"><div role="alert"><h2 class="govuk-error-summary__title"> There is a problem</h2><div class="govuk-error-summary__body"><ul class="govuk-list govuk-error-summary__list"><li><a href="#is-infrastructure-levy-formally-adopted-radio">Select whether levy formally adopted</a></li></ul></div></div></div>"`;
